--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-oauth2-jwt-bearer": "^1.5.0",
     "pg": "^8.7.3",
     "sequelize": "^6.20.1"
   },
